[package]
name = "judge-client-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = [ "derive" ] }
serde = { version = "1.0.193", features = [ "derive" ] }
toml = "0.8"
log = "0.4"
byte-unit = "4.0.18"
serde_with = "3.0.0"
log4rs = "1.2.0"
async-std = { version = "1.10.0", features = ["attributes"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
async-trait = "0.1.68"
cfg-if = "1.0.0"
thiserror = "1.0"

[dependencies.sqlx]
version = "0.7.3"
features = ["mysql", "runtime-async-std-native-tls"]
optional = true

[features]
hustoj = ["dep:sqlx"]

[dependencies.systemd-run]
version = "0.4.0"
features = [ "systemd_249", "unified_cgroup" ]
