[package]
name = "judge-client-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = [ "derive" ] }
serde = { version = "1.0.199", features = [ "derive" ] }
toml = "0.8"
log = "0.4"
byte-unit = "5.1.4"
serde_with = "3.8.1"
async-std = { version = "1.10.0", features = ["attributes"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
cfg-if = "1.0.0"
thiserror = "1.0"
env_logger = "0.11.3"
io_tee = "0.1.1"

[dependencies.sqlx]
version = "0.7.4"
features = ["mysql", "runtime-async-std-native-tls"]
optional = true

[features]
hustoj = ["dep:sqlx"]

[dependencies.systemd-run]
version = "0.7.1"
features = [ "systemd_249", "unified_cgroup" ]

[profile.release]
lto = true
codegen-units = 1
